kubernetes-manifests/webapp.yaml
# --- Webapp Deployment ---
# This manages the Python application pods.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
spec:
  replicas: 2 # Run 2 pods for availability 
  # --- ADD THIS STRATEGY SECTION ---
  strategy:
    type: Recreate
  # ---------------------------------  
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          # IMPORTANT: Replace this with the path to YOUR image in Artifact Registry
          image: goku431/3-tier-todo-app:4f07aedb0532fcf9d9b54b691fdfbbefd187f003
          ports:
            - containerPort: 8080
---
# --- Webapp Service 
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 80 # The Ingress will send traffic to this port
      targetPort: 8080 # The container is listening on this port
