kubernetes-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  rules:
  - http:
      paths:
      # Rule 1: The main To-Do app
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 80

      # Rule 2: Page 1
      - path: /page1
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 80

      # Rule 3: Page 2
      - path: /page2
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 80
